# Nexus

./: .env.example  LICENSE  README.md  pyproject.toml
docs/adrs/: ADR-001-base-architecture.md  ADR-002-memory-scope-contract.md  ADR-003-tool-permission-as-data.md  ADR-004-observability-tracer.md  ADR-004-retrieve-reason-surface.md  ADR-005-circuit-breaker.md  ADR-006-document-chunking-strategy.md
nexus/: __init__.py
nexus/agents/: __init__.py  document_agent.py  web_agent.py
nexus/config/: __init__.py  settings.py
nexus/core/: __init__.py  agent.py  circuit_breaker.py
nexus/memory/: __init__.py  base.py  in_memory.py
nexus/observability/: __init__.py  logging.py  schema.py  store.py  tracer.py
nexus/providers/: __init__.py  anthropic.py  base.py  factory.py  openai.py
nexus/tools/: __init__.py  base.py  registry.py
nexus/tools/builtins/: __init__.py  web_search.py
tests/: test_agent.py  test_circuit_breaker.py  test_config.py  test_document_agent.py  test_memory.py  test_observability.py  test_providers.py  test_tools.py  test_web_agent.py
