[project]
name = "nexus"
version = "0.1.0"
description = "Production-grade AI agent framework foundation."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic",
    "openai",
    "pydantic-settings",
    "structlog",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
